<resources>
    <string name="app_name">Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">"         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus         dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad         litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend         diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,         ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.           Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus         egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed         neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada         fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,         molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor         bibendum, vel congue leo egestas.           Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit         amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,         molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer         interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at         lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,         in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque         est.           Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.         Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui         non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In         eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,         quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra         ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a         placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus         convallis.           Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et         malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa         gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,         libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper         sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.     "</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="not_owner">You are not the owner!</string>
    <string name="at_least_1_img">You must have at least 1 image</string>
    <string name="content_not_empty">Content cannot be empty</string>
    <string name="delete_post">Delete this post?</string>
    <string name="delete_post_desc">Are you sure you want to delete this post? This post will be permanently deleted</string>
    <string name="new_post">New post</string>
    <string name="add_caption">Add caption…</string>
    <string name="cancel_post">Cancel</string>
    <string name="share">Share</string>
    <string name="input_content">Please enter content!</string>
    <string name="posts">posts</string>
    <string name="not_have_post">You don\'t have any posts yet</string>
    <string name="user_not_have_post">This user has no posts yet</string>
    <string name="setting">Settings</string>
    <string name="edit_info">Edit personal information</string>
    <string name="edit_info_header">Edit information</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="username_edit">Username</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="introduce">Introduce</string>
    <string name="change_password">Change password</string>
    <string name="save_info">Save</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="enter_info">Please enter information</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_title">Sign out of your account</string>
    <string name="like_count">Likes</string>
    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="edit_post">Edit post</string>
    <string name="post_title">Posts</string>
    <string name="incorrect_format">The image is not in the correct format</string>
    <string name="fail">Fail!</string>
    <string name="edit_post_success">Post edited successfully!</string>
    <string name="update_success">Updated successfully!</string>
    <string name="add_success">Post added successfully</string>
    <string name="undefined">Undefined</string>
    <string name="read_more">more</string>
    <string name="read_less">hide</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="register_success">Registered successfully</string>
</resources>