<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundColor"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="28dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ImageLogo"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:layout_marginTop="36dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:textSize="14sp"
            style="@style/EditText"
            android:hint="@string/name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            android:layout_marginTop="24dp"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="60dp"
            android:textSize="14sp"
            style="@style/EditText"
            android:hint="@string/username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            android:layout_marginTop="24dp"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:textSize="14sp"
            android:hint="@string/password"
            style="@style/EditText"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/et_password"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_hide"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:layout_marginTop="24dp"
            android:paddingVertical="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/sign_up"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/bt_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                style="@style/TextColorLogin"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/blue_text"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>