<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogBackground"
    android:clipToOutline="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_post"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        style="@style/TextColor"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_post_desc"
        android:textSize="16sp"
        style="@style/TextColor"
        android:layout_marginHorizontal="28dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        style="@style/BackgroundColorDividerDialog"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        style="@style/DialogBackgroundButton">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/delete"
            android:textSize="16sp"
            android:textColor="#FF1A12"
            android:fontFamily="@font/inter_bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/BackgroundColorDividerDialog"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        style="@style/DialogBackgroundButton">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancel"
            android:textSize="16sp"
            style="@style/TextColor"
            android:fontFamily="@font/inter_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>