<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundColor"
    tools:context=".ui.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/ImageBack"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/setting"
                style="@style/TextColor"
                android:textSize="18sp"
                android:fontFamily="@font/inter_bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_header"
            android:layout_marginTop="12dp"
            style="@style/BackgroundColorDivider"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/v_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20dp"
            android:text="@string/edit_info"
            style="@style/TextColor"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="16dp"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20dp"
            android:text="@string/language"
            style="@style/TextColor"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_language"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="16dp"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20dp"
            android:text="@string/theme"
            style="@style/TextColor"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_theme"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="16dp"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            android:text="@string/sign_out"
            android:textColor="#E21116"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>